<resources>
    <string name="app_name">От таксиста до миллионера</string>
    <string name="text_email">Email</string>
    <string name="email_edit_text_hint">Enter an email</string>
    <string name="name_edit_text">Name*</string>
    <string name="name_edit_text_hint">Enter your name</string>
    <string name="second_name_text">Second Name</string>
    <string name="second_name_edit_text_hint">Enter your second name</string>
    <string name="label_age">Phone number*</string>
    <string name="phone_edit_text_hint">Enter a phone number</string>
    <string name="ok">OK</string>
    <string name="later">Later</string>
    <string name="connect_to_facebook">Author on Facebook</string>
    <string name="connect_to_inst">Author on Instagram</string>
    <string name="phone_invalid">Invalid phone format</string>
    <string name="to_author">Connect with author:</string>
    <string name="continue_reading">Enter your contacts before continue reading</string>
    <string name="policy_title">Policy</string>
    <string name="policy_text" translatable="false">
        СОГЛАШЕНИЕ И УСЛОВИЯ ИСПОЛЬЗОВАНИЯ ПРИЛОЖЕНИЯ «От таксиста до миллионера»\n
НАСТОЯЩЕЕ СОГЛАШЕНИЕ РЕГУЛИРУЕТ ОТНОШЕНИЯ АВТОРА ДАННОГО ПРИЛОЖЕНИЯ (ДАЛЕЕ – АВТОР) И ПОЛЬЗОВАТЕЛЯ, КОТОРЫЙ ИСПОЛЬЗУЕТ ДАННЫЙ РЕСУРС.\n
АВТОР ДАННОГО ПРИЛОЖЕНИЯ НЕ НЕСЁТ ОТВЕТСТВЕННОСТИ ЗА ВВЕДЕННЫЕ ДАННЫЕ.\n
ПОЛЬЗОВАТЕЛЬ, РАЗМЕЩАЮЩИЙ ИНФОРМАЦИЮ В ДАННОМ ПРИЛОЖЕНИИ, САМОСТОЯТЕЛЬНО ПРЕДСТАВЛЯЕТ И ЗАЩИЩАЕТ СВОИ ИНТЕРЕСЫ, ВОЗНИКАЮЩИЕ В СВЯЗИ С РАЗМЕЩЕНИЕМ УКАЗАННОЙ ИНФОРМАЦИИ, В ОТНОШЕНИЯХ С ТРЕТЬИМИ ЛИЦАМИ.\n
1. О ПРИЛОЖЕНИИ «От таксиста до миллионера»\n
1.1 «От таксиста до миллионера» ПРЕДНАЗНАЧЕН ДЛЯ ВАШЕГО РАЗВЛЕЧЕНИЯ. МЫ НЕ НЕСЁМ ОТВЕТСТВЕННОСТЬ ЗА ЛЮБЫЕ РЕШЕНИЯ И ДЕЙСТВИЯ, КОТОРЫЕ ВЫ ПРЕДПРИНИМАЕТЕ, ОСНОВЫВАЯСЬ НА ТОМ, ЧТО ВЫ ЧИТАЕТЕ НА «От таксиста до миллионера».\n
1.2 «От таксиста до миллионера» РАЗРАБОТАН И ПОДДЕРЖИВАЕТСЯ ТОЛЬКО ДЛЯ ЗАКОННОГО ИСПОЛЬЗОВАНИЯ. \n
2. ДАННЫЕ ПОЛЬЗОВАТЕЛЕЙ В ПРИЛОЖЕНИИ «От таксиста до миллионера»\n
2.1. ЧТОБЫ ИСПОЛЬЗОВАТЬ ПРИЛОЖЕНИЕ БЕЗ ОГРАНИЧЕНИЙ, ВАМ БУДЕТ НЕОБХОДИМО ВВЕСТИ НЕКОТОРЫЕ ДАННЫЕ: ИМЯ И НОМЕР ТЕЛЕФОНА.\n
3. ОБЯЗАННОСТИ ПОЛЬЗОВАТЕЛЯ\n
3.1. ПОЛЬЗОВАТЕЛЬ ОБЯЗУЕТСЯ НЕ ИСПОЛЬЗОВАТЬ ПРИЛОЖЕНИЕ В НАРУШЕНИЕ ПРАВ И ЗАКОННЫХ ИНТЕРЕСОВ АВТОРА И ТРЕТЬИХ ЛИЦ.\n
3.2. ПОЛЬЗОВАТЕЛЬ ОБЯЗУЕТСЯ ИСПОЛЬЗОВАТЬ ПРИЛОЖЕНИЕ В ЛИЧНЫХ НЕКОММЕРЧЕСКИХ ЦЕЛЯХ. ЗАПРЕЩАЕТСЯ ПРЕДЛАГАТЬ УСЛУГИ, СВЯЗАННЫЕ С ИСПОЛЬЗОВАНИЕМ ПРИЛОЖЕНИЯ, ДРУГИМ ПОЛЬЗОВАТЕЛЯМ В ЦЕЛЯХ ИЗВЛЕЧЕНИЯ ПРИБЫЛИ. ЗАПРЕЩАЕТСЯ ИСПОЛЬЗОВАНИЕ КАКИХ-ЛИБО АВТОМАТИЧЕСКИХ СКРИПТОВ («ПРОГРАММЫ-РОБОТЫ») ИЛИ ИНЫХ СРЕДСТВ, ПОЗВОЛЯЮЩИХ ВЗАИМОДЕЙСТВОВАТЬ С ПРИЛОЖЕНИЕМ БЕЗ УЧАСТИЯ ПОЛЬЗОВАТЕЛЯ. ЗАПРЕЩАЕТСЯ СОВЕРШАТЬ ДЕЙСТВИЯ, НАПРАВЛЕННЫЕ НА НАРУШЕНИЕ НОРМАЛЬНОГО ФУНКЦИОНИРОВАНИЯ ПРИЛОЖЕНИЯ, И ИСПОЛЬЗОВАТЬ СПЕЦИАЛЬНЫЕ ПРОГРАММЫ, СОДЕРЖАЩИЕ ВРЕДОНОСНЫЕ КОМПОНЕНТЫ («ВИРУСЫ»).\n
4.КОНТЕНТ\n
«От таксиста до миллионера» ДАЁТ ПОЛЬЗОВАТЕЛЯМ ПРАВО ПОТРЕБЛЯТЬ КОНТЕНТ, СЛЕДУЮЩИМ ОБРАЗОМ:\n
4.1.1. АВТОР ПРИЛОЖЕНИЯ НЕ НЕСЁТ НИКАКОЙ ОТВЕТСТВЕННОСТИ ЗА ДОСТОВЕРНОСТЬ ДАННЫХ, ПРЕДОСТАВЛЕННЫХ ПОЛЬЗОВАТЕЛЯМИ.\n
4.1.2. ПОЛЬЗОВАТЕЛЬ ДАЕТ СОГЛАСИЕ, ЧТО ЕГО ДАННЫЕ МОГУТ БЫТЬ ИСПОЛЬЗОВАНЫ В ЦЕЛЯХ РАСПРОСТРАНЕНИЯ ИНФОРМАЦИИ ОБ АВТОРЕ.\n
4.1.3. АВТОР ПРЕДОСТАВЛЯЕТ СВОИ КОНТАКТЫ ДЛЯ ОБРАТНОЙ СВЯЗИ С ПОЛЬЗОВАТЕЛЯМИ ДАННОГО ПРИЛОЖЕНИЯ.\n
5. ОГРАНИЧЕНИЕ ОТВЕТСТВЕННОСТИ АВТОРА ПРИЛОЖЕНИЯ «От таксиста до миллионера»\n
5.1. ПРИЛОЖЕНИЕ И ЕГО УСЛУГИ, ВКЛЮЧАЯ ВСЕ СЦЕНАРИИ, ПРИЛОЖЕНИЯ, СОДЕРЖАНИЕ И ДИЗАЙН ЭТОГО ПРИЛОЖЕНИЯ, ПРЕДОСТАВЛЯЮТСЯ «КАК ЕСТЬ».\n
5.2. АВТОР ОТКАЗЫВАЕТСЯ ОТ ГАРАНТИИ, ЧТО ПРИЛОЖЕНИЕ ИЛИ УСЛУГИ МОГУТ, ИЛИ НЕ МОГУТ ИСПОЛЬЗОВАТЬСЯ ДЛЯ ОСОБЫХ ЦЕЛЕЙ.\n
5.3. АВТОР НЕ МОЖЕТ ГАРАНТИРОВАТЬ И НЕ ОБЕЩАЕТ НИКАКИХ КОНКРЕТНЫХ РЕЗУЛЬТАТОВ ОТ ИСПОЛЬЗОВАНИЯ ПРИЛОЖЕНИЯ И/ИЛИ УСЛУГ.\n
5.4. ИСПОЛЬЗУЯ ПРИЛОЖЕНИЕ, ПОЛЬЗОВАТЕЛЬ СОГЛАШАЕТСЯ С ТЕМ, ЧТО ИСПОЛЬЗУЕТ В ПРИЛОЖЕНИИ ЛЮБЫЕ МАТЕРИАЛЫ НА СВОЙ СТРАХ И РИСК И ОТВЕТСТВЕННЕН ЗА ЛЮБЫЕ ПОСЛЕДСТВИЯ ИСПОЛЬЗОВАНИЯ ЭТИХ МАТЕРИАЛОВ, ВКЛЮЧАЯ ЛЮБОЙ УЩЕРБ ДАННЫХ ИЛИ ДРУГОГО ВРЕДА.\n

    </string>
    <string name="empty_field">Enter a required fields</string>
    <string name="thanks">Thank you!</string>
    <string name="gone_wrong">Something gone wrong,check your internet connection</string>
    <string name="contents">Table of contents</string>
</resources>