<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            style="@android:style/TextAppearance.Large"
            android:text="@string/continue_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:textSize="14dp"
            android:textStyle="italic"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email"
            android:id="@+id/textView6"
            android:labelFor="@+id/email_edit_text"
            android:layout_marginLeft="6dp"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email_edit_text_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="8dp"
            android:textSize="14dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_edit_text"
            android:layout_marginLeft="6dp" />

        <EditText
            android:id="@+id/name_edit_text"
            android:hint="@string/name_edit_text_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="14dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_age"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="6dp" />

        <EditText
            android:id="@+id/phone_edit_text"
            android:inputType="phone"
            android:hint="@string/phone_edit_text_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>